# visu-alloc

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/tui/: renderer.cpp  renderer.hpp
